Changed the border and addid div elements

--- a/htmlbio.html
+++ b/htmlbio.html
@@ -10,35 +10,42 @@
     <script src="main.js"></script>
 </head>
 
-<body style="border: 1px solid black">
-    <h1>Student Bio</h1>
-    <h2>Connor Brown</h2>
-    <img src="https://newevolutiondesigns.com/images/freebies/cool-wallpaper-3.jpg" width="200" height="200" alt="Connor's picture"
-    />
-    <br>
-    <p>Λορεμ ιπσθμ δολορ σιτ αμετ, αδ νιβη ηαρθμ περσιθσ προ. Εα μει qθανδο φαcετε πατριοqθε, vελιτ σαεπε εστ ιν. Δθο νιβη σιμθλ
-        προπριαε ιδ, διcαμ qθανδο απειριαν θτ qθι, εξερcι οφφενδιτ αν εθμ. Ηαβεο λαθδεμ ει σιτ. Ιδ εαμ ηινc cοτιδιεqθε, φαλλι
-        μανδαμθσ τε εθμ. Ετ vιδισσε δεμοcριτθμ μει, ταμqθαμ εqθιδεμ ναμ ιν. Ηασ ερατ εξερcι θτ, φαcετε ιμπεδιτ ιν cθμ, ναμ
-        νομιναvι ρατιονιβθσ εα. Vελ θτ cλιτα νθσqθαμ μνεσαρcηθμ, ιδ σεδ στετ ιπσθμ. Qθο αδ ομνισ ρεcτεqθε. Εθμ ιν γραεcε
-        μολεστιε, vιξ ατ δθισ ερρεμ μελιθσ, μεα αδηθc ινστρθcτιορ νο. Αμετ cονσθλατθ δθο αδ, αδ θτιναμ δετραcτο qθο, εθ δολορε
-        περcιπιτθρ ρεπρεηενδθντ προ. Ιν προ περιcθλα σαλθτανδι, ιριθρε ινvιδθντ μει τε. Τε ποσσιμ δελενιτ σινγθλισ εστ, σεα
-        ερρεμ οπτιον ατ, ιν λιβρισ εσσεντ σινγθλισ θσθ. Ηασ επιcθρι λθπτατθμ εξ, νε cθμ ανιμαλ λθπτατθμ αργθμεντθμ. Διαμ
-        ταντασ προβατθσ cθμ ατ, ρατιονιβθσ ελαβοραρετ νε προ. Θτ μει vερτερεμ vιτθπερατοριβθσ, cθμ εξ ταλε cονσθλ πθτεντ.</p>
-    <h2>Contact Info</h2>
-    <ul>
-        <li>
-            <strong>Email:</strong>
-            <a href="https://mail.google.com" target="_blank">connormbrown1997@gmail.com</a>
-        </li>
-        <li>
-            <strong>Github:</strong>
-            <a href="https://github.com/Connor-Brown" target="_blank"> Connor-Brown</a>
-        </li>
-        <li>
-            <strong>Portfolio:</strong>
-            <a href="#"> Coming Soon</a>
-        </li>
-    </ul>
+<body style="border: 1px double chartreuse">
+
+    <div class="Heading">
+        <h1>Student Bio</h1>
+        <h2>Connor Brown</h2>
+        <img src="https://newevolutiondesigns.com/images/freebies/cool-wallpaper-3.jpg" width="200" height="200" alt="Connor's picture"
+        />
+        <br>
+        <p>Λορεμ ιπσθμ δολορ σιτ αμετ, αδ νιβη ηαρθμ περσιθσ προ. Εα μει qθανδο φαcετε πατριοqθε, vελιτ σαεπε εστ ιν. Δθο νιβη
+            σιμθλ προπριαε ιδ, διcαμ qθανδο απειριαν θτ qθι, εξερcι οφφενδιτ αν εθμ. Ηαβεο λαθδεμ ει σιτ. Ιδ εαμ ηινc cοτιδιεqθε,
+            φαλλι μανδαμθσ τε εθμ. Ετ vιδισσε δεμοcριτθμ μει, ταμqθαμ εqθιδεμ ναμ ιν. Ηασ ερατ εξερcι θτ, φαcετε ιμπεδιτ
+            ιν cθμ, ναμ νομιναvι ρατιονιβθσ εα. Vελ θτ cλιτα νθσqθαμ μνεσαρcηθμ, ιδ σεδ στετ ιπσθμ. Qθο αδ ομνισ ρεcτεqθε.
+            Εθμ ιν γραεcε μολεστιε, vιξ ατ δθισ ερρεμ μελιθσ, μεα αδηθc ινστρθcτιορ νο. Αμετ cονσθλατθ δθο αδ, αδ θτιναμ
+            δετραcτο qθο, εθ δολορε περcιπιτθρ ρεπρεηενδθντ προ. Ιν προ περιcθλα σαλθτανδι, ιριθρε ινvιδθντ μει τε. Τε ποσσιμ
+            δελενιτ σινγθλισ εστ, σεα ερρεμ οπτιον ατ, ιν λιβρισ εσσεντ σινγθλισ θσθ. Ηασ επιcθρι λθπτατθμ εξ, νε cθμ ανιμαλ
+            λθπτατθμ αργθμεντθμ. Διαμ ταντασ προβατθσ cθμ ατ, ρατιονιβθσ ελαβοραρετ νε προ. Θτ μει vερτερεμ vιτθπερατοριβθσ,
+            cθμ εξ ταλε cονσθλ πθτεντ.</p>
+    </div>
+
+    <div class="ContactInfo">
+        <h2>Contact Info</h2>
+        <ul>
+            <li>
+                <strong>Email:</strong>
+                <a href="https://mail.google.com" target="_blank">connormbrown1997@gmail.com</a>
+            </li>
+            <li>
+                <strong>Github:</strong>
+                <a href="https://github.com/Connor-Brown" target="_blank"> Connor-Brown</a>
+            </li>
+            <li>
+                <strong>Portfolio:</strong>
+                <a href="#"> Coming Soon</a>
+            </li>
+        </ul>
+    </div>
 </body>
 
 </html>
