--- a/htmlbio.html
+++ b/htmlbio.html
@@ -1,4 +1,55 @@
 <!DOCTYPE <!DOCTYPE html>
+
+<style>
+    h1 {
+        font-size: 60px;
+        text-align: center;
+        margin-bottom: 15px;
+        text-decoration: underline;
+        background-color: black;
+        color: white;
+    }
+
+    h2 {
+        font-size: 40px;
+        text-align: center;
+        margin-top: 15px;
+        margin-bottom: 15px;
+    }
+
+    h3 {
+        font-size: 20px;
+        text-align: center;
+        margin-top: 15px;
+    }
+
+    img {
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        border: 2px solid white;
+    }
+
+    p {
+        text-align: center;
+        font-size: 20px;
+        font-weight: bold;
+    }
+
+    ul {
+        text-align: center;
+        font-size: 35px;
+        list-style-position: inside;
+        border-style: solid;
+        border-width: 5px;
+    }
+
+    body {
+        background-color: wheat;
+        border: 5px double black;
+    }
+</style>
+
 <html>
 
 <head>
@@ -10,7 +61,7 @@
     <script src="main.js"></script>
 </head>
 
-<body style="border: 1px double chartreuse">
+<body>
 
     <div class="Heading">
         <h1>Student Bio</h1>
