changed the second assignment to actually have my info, including picture

--- a/index.html
+++ b/index.html
@@ -1,1 +1,2 @@
-<a href="htmlbio.html">My Bio Page</a>
+<a href="first assignment/htmlbio.html">My Bio Page</a> <br>
+<a href="second assignment/html-bio-with-css.html">My Bio Page With CSS</a> <br>
