updated css on stuff

--- a/index.html
+++ b/index.html
@@ -1,2 +1,45 @@
-<a href="first assignment/htmlbio.html">My Bio Page</a> <br>
-<a href="second assignment/html-bio-with-css.html">My Bio Page With CSS</a> <br>
+<!DOCTYPE html>
+
+<style>
+    body {
+        text-align: center;
+        background-color: wheat;
+    }
+
+    h2 {
+        margin: 40px;
+    }
+
+    #projects {
+        margin: auto;
+        border: 5px double black;
+        width: 800px;
+        align-content: center;
+        background-color: #E1EBFF;
+    }
+</style>
+
+<html>
+
+<head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Index Page</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
+    <script src="main.js"></script>
+</head>
+
+<body>
+    <h1>Project Directory</h1>
+    <div id="projects">
+        <h2>
+            <a href="first assignment/htmlbio.html">My Bio Page</a>
+        </h2>
+        <h2>
+            <a href="second assignment/html-bio-with-css.html">My Bio Page With CSS</a>
+        </h2>
+    </div>
+</body>
+
+</html>
