--- a/first assignment/htmlbio.html
+++ b/first assignment/htmlbio.html
@@ -7,7 +7,7 @@
         margin-bottom: 15px;
         text-decoration: underline;
         background-color: black;
-        color: white;
+        color: #E1EBFF;
     }
 
     h2 {
@@ -42,6 +42,7 @@
         list-style-position: inside;
         border-style: solid;
         border-width: 5px;
+        background-color: #E1EBFF;
     }
 
     body {
